uwagi z 08.02.2025